removed double instantiation of an endpoint